c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/extra_credit/union_var_bad_tag.c
int main(void) {
    union 4 foo;  // a union tag must be an identifier (not a constant)
    return 0;
}